--- a/server/templates/filedown.html
+++ b/server/templates/filedown.html
@@ -6,7 +6,7 @@
 
     <img src="{{ url_for('static',filename='images/download.png') }}", width="70")/><br><br>
 
-    <form action = "http://localhost:5000/fileDown" method = "POST"
+    <form action = "http://10.42.0.1:5000/fileDown" method = "POST"
       enctype = "multipart/form-data" class="form-inline">
       <div class="col text-center">
         <input type = "text" name = "file" class="form-control"/>
